Return 204 if route has no pickup/dropoff point
